# youtube-manager-agent

./: .gitignore  README.md  add_chapters.py  add_to_playlist.py  auth.py  chop.sh  list_playlist.py  push_token.sh  pyproject.toml  reauth.py  rename.py  upload.py
auth/: auth.py  reauth.py
docs/: chopping.md
examples/: module1-part2-chop-plan.md
manifests/: module2-manifest.json  module4-manifest.json  module5-manifest.json
playlist/: add_to_playlist.py  list_playlist.py
transcript/: clip_transcript.py
video/: add_chapters.py  rename.py  upload.py
